Fixed some bugs.

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
   let importFleetData = function(fleetData)
   {
     ships = [];
+    sameShipListTable = [];
     fleetData.forEach((shipData, i) => {
       const dbShipData = shipDB[shipData.id];
       let ship;
