出撃データバグ修正、タイポ修正

--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
       let taskforceDiv = document.createElement('div');
       taskforceDiv.className = 'kcsb_taskforce_area';
       taskforceDiv.id = getTaskForceDivId(taskforceId);
-      taskforceContainer = taskforceContainers[taskforceData.oprationId];
+      taskforceContainer = taskforceContainers[taskforceData.operationId];
       taskforceContainer.appendChild(taskforceDiv);
       let taskforceLabel = document.createElement('p');
       taskforceLabel.textContent = taskforceData.name;
